--- a/iocs/vimbaIOC/iocBoot/iocVimba/Makefile
+++ b/iocs/vimbaIOC/iocBoot/iocVimba/Makefile
@@ -1,6 +1,7 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
 #ARCH = windows-x64-static
-ARCH = linux-x86_64
+#ARCH = linux-x86_64
+ARCH = linux-x86_64-ub18
 TARGETS = envPaths dllPath.bat
 include $(TOP)/configure/RULES.ioc
