--- a/iocs/vimbaIOC/iocBoot/iocVimba/Makefile
+++ b/iocs/vimbaIOC/iocBoot/iocVimba/Makefile
@@ -1,5 +1,6 @@
 TOP = ../..
 include $(TOP)/configure/CONFIG
+#ARCH = windows-x64
 #ARCH = windows-x64-static
 ARCH = linux-x86_64
 #ARCH = linux-x86_64-ub18
