Add ADGenICamSupport.dbd for genicamShowFeature command

--- a/iocs/vimbaIOC/vimbaApp/src/Makefile
+++ b/iocs/vimbaIOC/vimbaApp/src/Makefile
@@ -13,6 +13,7 @@ endif
 
 # <name>.dbd will be created from <name>Include.dbd
 DBD += $(PROD_NAME).dbd
+$(PROD_NAME)_DBD += ADGenICamSupport.dbd
 $(PROD_NAME)_DBD += ADVimbaSupport.dbd
 
 # <name>_registerRecordDeviceDriver.cpp will be created from <name>.dbd
